--- a/packages/qgis_umesh.vcxproj.filters
+++ b/packages/qgis_umesh.vcxproj.filters
@@ -18,12 +18,6 @@
     <ClCompile Include="src\qgis_umesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="generated\moc_MyEditTool.cpp">
-      <Filter>Generated Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\MyEditTool.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\ugrid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -72,12 +66,6 @@
     <ClCompile Include="src\read_json.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\edit_observation_points_window.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="generated\moc_edit_observation_points_window.cpp">
-      <Filter>Generated Files</Filter>
-    </ClCompile>
     <ClCompile Include="generated\moc_add_current_view_window.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
@@ -87,15 +75,18 @@
     <ClCompile Include="src\perf_timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\handle_vector_layers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="generated\moc_handle_vector_layers.cpp">
+      <Filter>Generated Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="include\qgis_umesh.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
     <CustomBuild Include="include\map_time_manager_window.h">
-      <Filter>Header Files</Filter>
-    </CustomBuild>
-    <CustomBuild Include="include\MyEditTool.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
     <CustomBuild Include="include\MyDrawingCanvas.h">
@@ -113,10 +104,10 @@
     <CustomBuild Include="include\map_property_window.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
-    <CustomBuild Include="include\edit_observation_points_window.h">
+    <CustomBuild Include="include\add_current_view_window.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
-    <CustomBuild Include="include\add_current_view_window.h">
+    <CustomBuild Include="include\handle_vector_layers.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
