--- a/packages/CMakeLists.txt
+++ b/packages/CMakeLists.txt
@@ -1,4 +1,9 @@
-set(PROJECT_NAME qgis_umesh)
+message("*** Enter packages directory") 
+
+set(CMAKE_AUTOMOC ON)
+set(AUTOMOC_EXECUTABLE "c:/OSGeo4W/apps/Qt5/bin/moc.exe")
+
+set(PROJECT_NAME qgis_sumesh)
 
 ################################################################################
 # Source groups
@@ -8,18 +13,6 @@ set(no_group_source_files
 )
 source_group("" FILES ${no_group_source_files})
 
-#set(Generated_Files
-#    "generated/moc_add_current_view_window.cpp"
-#    "generated/moc_edit_observation_points_window.cpp"
-#    "generated/moc_map_property.cpp"
-#    "generated/moc_map_property_window.cpp"
-#    "generated/moc_map_time_manager_window.cpp"
-#    "generated/moc_MyDrawingCanvas.cpp"
-#    "generated/moc_MyEditTool.cpp"
-#    "generated/moc_my_date_time_edit.cpp"
-#    "generated/moc_QColorRampEditor.cpp"
-#    "generated/moc_qgis_umesh.cpp"
-#)
 source_group("Generated Files" FILES ${Generated_Files})
 
 set(Header_Files
@@ -27,7 +20,7 @@ set(Header_Files
     "include/AbstractCanvasListener.h"
     "include/add_current_view_window.h"
     "include/data_struct.h"
-    "include/edit_observation_points_window.h"
+    "include/handle_vector_layers.h"
     "include/his_cf.h"
     "include/json_reader.h"
     "include/map_property.h"
@@ -35,18 +28,18 @@ set(Header_Files
     "include/map_time_manager_window.h"
     "include/my_date_time_edit.h"
     "include/MyDrawingCanvas.h"
-    "include/MyEditTool.h"
+#    "include/MyEditTool.h"
     "include/netcdf.h"
 #   "include/pattern.xpm"
     "include/perf_timer.h"
     "include/QColorRampEditor.h"
-    "include/qgis_umesh.h"
+    "include/qgis_sumesh.h"
 #   "include/qgis_umesh_version.h"
 #   "include/qgis_umesh_version.h.vcs"
 #   "include/qgis_umesh_version.rc"
 #   "include/qqis_umesh_version.rc"
 #   "include/qqis_umesh_version.rc.vcs"
-    "include/ugrid.h"
+    "include/grid.h"
 #   "include/vsi.xpm"
 #   "include/vsi_disabled.xpm"
 )
@@ -54,20 +47,20 @@ source_group("Header Files" FILES ${Header_Files})
 
 set(Source_Files
     "src/add_current_view_window.cpp"
-    "src/edit_observation_points_window.cpp"
+    "src/handle_vector_layers.cpp"
     "src/his_cf.cpp"
     "src/map_property.cpp"
     "src/map_property_window.cpp"
     "src/map_time_manager_window.cpp"
     "src/my_date_time_edit.cpp"
     "src/MyDrawingCanvas.cpp"
-    "src/MyEditTool.cpp"
+#    "src/MyEditTool.cpp"
     "src/perf_timer.cpp"
     "src/QColorRampEditor.cpp"
-    "src/qgis_umesh.cpp"
-    "src/qgis_umesh_version.cpp"
+    "src/qgis_sumesh.cpp"
+    "src/qgis_sumesh_version.cpp"
     "src/read_json.cpp"
-    "src/ugrid.cpp"
+    "src/grid.cpp"
 )
 source_group("Source Files" FILES ${Source_Files})
 
@@ -93,8 +86,8 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 # Target name
 ################################################################################
 set_target_properties(${PROJECT_NAME} PROPERTIES
-    TARGET_NAME_DEBUG   "qgis_umesh"
-    TARGET_NAME_RELEASE "qgis_umesh"
+    TARGET_NAME_DEBUG   "qgis_sumesh"
+    TARGET_NAME_RELEASE "qgis_sumesh"
 )
 ################################################################################
 # Output directory
@@ -121,21 +114,28 @@ set_target_properties(${PROJECT_NAME} PROPERTIES MSVC_RUNTIME_LIBRARY ${MSVC_RUN
 ################################################################################
 # Include directories
 ################################################################################
-target_include_directories(${PROJECT_NAME} PUBLIC
-    "${CMAKE_CURRENT_SOURCE_DIR}/.;"
-    "${CMAKE_CURRENT_SOURCE_DIR}/include;"
-    "c:/OSGeo4W/include;"
-    "c:/OSGeo4W/apps/qgis/include;"
-    "$ENV{QT5DIR64OSGEO}/include;"
-    "$ENV{QT5DIR64OSGEO}/include/ActiveQt;"
-    "$ENV{QT5DIR64OSGEO}/include/Qt;"
-    "$ENV{QT5DIR64OSGEO}/include/QtCore;"
-    "$ENV{QT5DIR64OSGEO}/include/QtGui;"
-    "$ENV{QT5DIR64OSGEO}/include/QtSvg;"
-    "$ENV{QT5DIR64OSGEO}/include/QtWidgets;"
-    "$ENV{QT5DIR64OSGEO}/include/QtXml;"
-    "$ENV{BOOST_INCLUDEDIR}"
-)
+if (MSVC)
+    message("*** MSVC ")
+    target_include_directories(${PROJECT_NAME} PUBLIC
+        "${CMAKE_CURRENT_SOURCE_DIR}/.;"
+        "${CMAKE_CURRENT_SOURCE_DIR}/include;"
+        "c:/Program Files (x86)/Microsoft Visual Studio/2022/BuildTools/VC/Tools/MSVC/14.40.33807/include/"
+        "c:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/ucrt/"
+        "c:/OSGeo4W/include;"
+        "c:/OSGeo4W/apps/qgis/include;"
+        "$ENV{QT5DIROSGEO}/include;"
+        "$ENV{QT5DIROSGEO}/include/ActiveQt;"
+        "$ENV{QT5DIROSGEO}/include/Qt;"
+        "$ENV{QT5DIROSGEO}/include/QtCore;"
+        "$ENV{QT5DIROSGEO}/include/QtGui;"
+        "$ENV{QT5DIROSGEO}/include/QtSvg;"
+        "$ENV{QT5DIROSGEO}/include/QtWidgets;"
+        "$ENV{QT5DIROSGEO}/include/QtXml;"
+        "c:/boost/boost_1_85_0/"
+    )
+else()
+    message("*** not supported, ex. UCRT64 ")
+endif()
 
 ################################################################################
 # Compile definitions
@@ -197,10 +197,10 @@ add_custom_command_if(
     TARGET ${PROJECT_NAME}
     PRE_BUILD
     COMMANDS
-    COMMAND   $<CONFIG:Debug> call ../scripts/git_insert_hash.cmd ./include qgis_umesh_version.h
-    COMMAND   $<CONFIG:Debug> call ../scripts/git_insert_hash.cmd ./include qgis_umesh_version.rc
-    COMMAND $<CONFIG:Release> call ../scripts/git_insert_hash.cmd ./include qgis_umesh_version.h
-    COMMAND $<CONFIG:Release> call ../scripts/git_insert_hash.cmd ./include qgis_umesh_version.rc
+    COMMAND   $<CONFIG:Debug> call ../scripts/git_insert_hash.cmd .\\include qgis_umesh_version.h
+    COMMAND   $<CONFIG:Debug> call ../scripts/git_insert_hash.cmd .\\include qgis_umesh_version.rc
+    COMMAND $<CONFIG:Release> call ../scripts/git_insert_hash.cmd .\\include qgis_umesh_version.h
+    COMMAND $<CONFIG:Release> call ../scripts/git_insert_hash.cmd .\\include qgis_umesh_version.rc
 )
 
 ################################################################################
@@ -208,20 +208,20 @@ add_custom_command_if(
 ################################################################################
 set(ADDITIONAL_LIBRARY_DEPENDENCIES
     "$<$<CONFIG:Debug>:"
-        "qtmaind;"
-        "Qt5Cored;"
-        "Qt5Guid;"
-        "Qt5Widgetsd;"
-        "Qt5PrintSupportd"
+        "qtmain"
+        "Qt5Core"
+        "Qt5Gui"
+        "Qt5Widgets"
+        "Qt5PrintSupport"
         "qgis_analysis"
         "qgis_core"
         "qgis_gui"
     ">"
     "$<$<CONFIG:Release>:"
-        "qtmain;"
-        "Qt5Core;"
-        "Qt5Gui;"
-        "Qt5Widgets;"
+        "qtmain"
+        "Qt5Core"
+        "Qt5Gui"
+        "Qt5Widgets"
         "Qt5PrintSupport"
         "qgis_analysis"
         "qgis_core"
@@ -232,8 +232,10 @@ set(ADDITIONAL_LIBRARY_DEPENDENCIES
 target_link_libraries(${PROJECT_NAME} PRIVATE "${ADDITIONAL_LIBRARY_DEPENDENCIES}")
 
 target_link_directories(${PROJECT_NAME} PRIVATE
-    "$ENV{QT5DIR64OSGEO}/lib;"
+    "$ENV{QT5DIROSGEO}/lib;"
     "c:/OSGeoW/apps/qgis/lib"
     "${CMAKE_CURRENT_SOURCE_DIR}/../lib/${CMAKE_VS_PLATFORM_NAME}/$<CONFIG>"
 )
+
+message("*** Exiting packages directory") 
 
