--- a/packages/qgis_umesh.vcxproj
+++ b/packages/qgis_umesh.vcxproj
@@ -20,7 +20,7 @@
     <ClCompile Include="generated\moc_MyEditTool.cpp" />
     <ClCompile Include="generated\moc_my_date_time_edit.cpp" />
     <ClCompile Include="generated\moc_QColorRampEditor.cpp" />
-    <ClCompile Include="generated\moc_qgis_umesh.cpp" />
+    <ClCompile Include="generated\moc_qgis_sumesh.cpp" />
     <ClCompile Include="src\add_current_view_window.cpp" />
     <ClCompile Include="src\edit_observation_points_window.cpp" />
     <ClCompile Include="src\grid.cpp" />
@@ -34,12 +34,12 @@
     <ClCompile Include="src\my_date_time_edit.cpp" />
     <ClCompile Include="src\perf_timer.cpp" />
     <ClCompile Include="src\QColorRampEditor.cpp" />
-    <ClCompile Include="src\qgis_umesh.cpp" />
-    <ClCompile Include="src\qgis_umesh_version.cpp" />
+    <ClCompile Include="src\qgis_sumesh.cpp" />
+    <ClCompile Include="src\qgis_sumesh_version.cpp" />
     <ClCompile Include="src\read_json.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="include\qgis_umesh.h">
+    <CustomBuild Include="include\qgis_sumesh.h">
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(QT5DIR64OSGEO)\bin\moc.exe   %(FullPath)    -o generated\moc_%(Filename).cpp</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Performing Custom Build Step: MOC%27ing %(FullPath)</Message>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Performing Custom Build Step: MOC%27ing %(FullPath)</Message>
@@ -139,7 +139,7 @@
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(QT5DIR64OSGEO)\bin\moc.exe   %(FullPath)    -o generated\moc_%(Filename).cpp</Command>
     </CustomBuild>
     <ClInclude Include="include\perf_timer.h" />
-    <ClInclude Include="include\qgis_umesh_version.h" />
+    <ClInclude Include="include\qgis_sumesh_version.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
@@ -191,7 +191,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <PreBuildEvent>
-      <Command>call ..\scripts\git_insert_hash.cmd .\include qgis_umesh_version.h
+      <Command>call ..\scripts\git_insert_hash.cmd .\include qgis_sumesh_version.h
 call ..\scripts\git_insert_hash.cmd .\include qqis_umesh_version.rc</Command>
     </PreBuildEvent>
     <Midl>
@@ -203,7 +203,7 @@ call ..\scripts\git_insert_hash.cmd .\include qqis_umesh_version.rc</Command>
       </HeaderFileName>
     </Midl>
     <ClCompile>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Disabled</Optimization>
       <InlineFunctionExpansion>Default</InlineFunctionExpansion>
       <AdditionalIncludeDirectories>.\include;c:\OSGeo4W\include\;c:\OSGeo4W\apps\qgis\include;$(QT5DIR64OSGEO)\include;$(QT5DIR64OSGEO)\include\ActiveQt\;$(QT5DIR64OSGEO)\include\Qt\;$(QT5DIR64OSGEO)\include\QtCore\;$(QT5DIR64OSGEO)\include\QtGui\;$(QT5DIR64OSGEO)\include\QtSvg\;$(QT5DIR64OSGEO)\include\QtWidgets\;$(QT5DIR64OSGEO)\include\QtXml\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN64;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_WARNINGS;QT_DLL;QT_THREAD_SUPPORT;CORE_EXPORT=;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -212,7 +212,7 @@ call ..\scripts\git_insert_hash.cmd .\include qqis_umesh_version.rc</Command>
       <AssemblerListingLocation>.\Release/</AssemblerListingLocation>
       <ObjectFileName>.\Release/</ObjectFileName>
       <ProgramDataBaseFileName>.\Release/</ProgramDataBaseFileName>
-      <BrowseInformation>false</BrowseInformation>
+      <BrowseInformation>true</BrowseInformation>
       <WarningLevel>Level4</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -232,7 +232,7 @@ call ..\scripts\git_insert_hash.cmd .\include qqis_umesh_version.rc</Command>
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <SubSystem>Console</SubSystem>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>c:\OSGeo4W\apps\qgis\plugins\$(ProjectName).pdb</ProgramDatabaseFile>
     </Link>
     <Bscmake>
@@ -241,7 +241,7 @@ call ..\scripts\git_insert_hash.cmd .\include qqis_umesh_version.rc</Command>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <PreBuildEvent>
-      <Command>call ..\scripts\git_insert_hash.cmd .\include qgis_umesh_version.h
+      <Command>call ..\scripts\git_insert_hash.cmd .\include qgis_sumesh_version.h
 call ..\scripts\git_insert_hash.cmd .\include qqis_umesh_version.rc</Command>
     </PreBuildEvent>
     <Midl>
