--- a/packages/CMakeLists.txt
+++ b/packages/CMakeLists.txt
@@ -115,7 +115,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES MSVC_RUNTIME_LIBRARY ${MSVC_RUN
 # Include directories
 ################################################################################
 if (MSVC)
-    message("*** MSVC ")
+    message("*** MSVC 1")
     target_include_directories(${PROJECT_NAME} PUBLIC
         "${CMAKE_CURRENT_SOURCE_DIR}/.;"
         "${CMAKE_CURRENT_SOURCE_DIR}/include;"
