--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,10 @@ bin/
 packages/Release/
 packages/x64/
 .vs/
+/_build
+/packages/Debug
+packages/generated/moc_create_vector_layers.cpp
+packages/generated/moc_handle_vector_layers.cpp
+packages/generated/moc_qgis_sumesh.cpp
+*.bak
+*.pdb
