--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ packages/generated/moc_handle_vector_layers.cpp
 packages/generated/moc_qgis_sumesh.cpp
 *.bak
 *.pdb
+packages/include/qgis_sumesh_version.h
+packages/include/qgis_sumesh_version.h
