--- a/packages/CMakeLists.txt
+++ b/packages/CMakeLists.txt
@@ -1,7 +1,7 @@
 message("*** Enter packages directory") 
 
 set(CMAKE_AUTOMOC ON)
-set(AUTOMOC_EXECUTABLE "$ENV{QT5DIROSGEO}/bin/moc.exe")
+set(AUTOMOC_EXECUTABLE "$ENV{QT5DIR_OSGEO}/bin/moc.exe")
 
 set(PROJECT_NAME qgis_sumesh)
 
@@ -123,14 +123,14 @@ if (MSVC)
         "c:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/ucrt/"
         "c:/OSGeo4W/include;"
         "c:/OSGeo4W/apps/qgis/include;"
-        "$ENV{QT5DIROSGEO}/include;"
-        "$ENV{QT5DIROSGEO}/include/ActiveQt;"
-        "$ENV{QT5DIROSGEO}/include/QtCore;"
-        "$ENV{QT5DIROSGEO}/include/QtGui;"
-        "$ENV{QT5DIROSGEO}/include/QtSvg;"
-        "$ENV{QT5DIROSGEO}/include/QtWidgets;"
-        "$ENV{QT5DIROSGEO}/include/QtXml;"
-        "c:/boost/boost_1_85_0/"
+        "$ENV{QT5DIR_OSGEO}/include;"
+        "$ENV{QT5DIR_OSGEO}/include/ActiveQt;"
+        "$ENV{QT5DIR_OSGEO}/include/QtCore;"
+        "$ENV{QT5DIR_OSGEO}/include/QtGui;"
+        "$ENV{QT5DIR_OSGEO}/include/QtSvg;"
+        "$ENV{QT5DIR_OSGEO}/include/QtWidgets;"
+        "$ENV{QT5DIR_OSGEO}/include/QtXml;"
+        "$ENV{BOOST_ROOT_DIR}"
     )
 else()
     message("*** not supported, ex. UCRT64 ")
@@ -227,7 +227,7 @@ set(ADDITIONAL_LIBRARY_DEPENDENCIES
 target_link_libraries(${PROJECT_NAME} PRIVATE "${ADDITIONAL_LIBRARY_DEPENDENCIES}")
 
 target_link_directories(${PROJECT_NAME} PRIVATE
-    "$ENV{QT5DIROSGEO}/lib;"
+    "$ENV{QT5DIR_OSGEO}/lib;"
     "c:/OSGeo4W/apps/qgis/lib"
     "c:/Program Files/netCDF 4.9.2/lib"
 )
